--- a/graphics/R-magick/Makefile
+++ b/graphics/R-magick/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2024/11/24 06:59:06 adam Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/07 03:34:25 mef Exp $
 
 R_PKGNAME=	magick
-R_PKGVER=	2.8.3
-PKGREVISION=	10
+R_PKGVER=	2.8.5
 CATEGORIES=	graphics
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,8 +15,14 @@ USE_LANGUAGES=	c c++
 USE_TOOLS+=	pkg-config
 
 # Packages suggested but not available:
-#   'av', 'rsvg', 'webp', 'pdftools', 'gapminder', 'IRdisplay',
-#   'tesseract', 'gifski'
+#   'av', 'rsvg', 'webp', 'pdftools', 'gapminder', 'tesseract', 'gifski'
+
+TEST_DEPENDS+=	R-IRdisplay-[0-9]*:../../devel/R-IRdisplay
+TEST_DEPENDS+=	R-ggplot2-[0-9]*:../../graphics/R-ggplot2
+TEST_DEPENDS+=	R-jsonlite-[0-9]*:../../textproc/R-jsonlite
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+TEST_DEPENDS+=	R-spelling-[0-9]*:../../textproc/R-spelling
 
 .include "../../graphics/ImageMagick/buildlink3.mk"
 .include "../../math/R/Makefile.extension"
