--- a/mail/postfix-sqlite/Makefile
+++ b/mail/postfix-sqlite/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.42 2024/11/14 22:20:39 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2024/12/07 07:03:59 taca Exp $
 
 COMMENT=		Postfix SMTP server SQLite backend module
-PKGREVISION=		3
 
 POSTFIX_LIB=		sqlite
 POSTFIX_LIBDIR=		src/global
