--- a/graphics/opencolorio/Makefile
+++ b/graphics/opencolorio/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2024/11/04 21:20:59 adam Exp $
+# $NetBSD: Makefile,v 1.14 2024/12/07 15:04:14 nia Exp $
 
 DISTNAME=	OpenColorIO-2.4.0
 PKGNAME=	${DISTNAME:tl}
@@ -28,6 +28,10 @@ CMAKE_CONFIGURE_ARGS+=	-DOCIO_BUILD_PYGLUE:BOOL=OFF
 CMAKE_CONFIGURE_ARGS+=	-DOCIO_INSTALL_EXT_PACKAGES:STRING=NONE
 
 .include "../../mk/bsd.prefs.mk"
+
+.if ${MACHINE_ARCH} == "i386"
+CMAKE_CONFIGURE_ARGS+=	-DOCIO_USE_SIMD:BOOL=OFF
+.endif
 
 .if ${MACHINE_ARCH} != "x86_64"
 CMAKE_CONFIGURE_ARGS+=	-DOCIO_BUILD_ENABLE_OPTIMIZATIONS_SSE:BOOL=OFF
