--- a/mail/mu/Makefile
+++ b/mail/mu/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2024/11/14 22:20:38 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/07 15:19:52 nia Exp $
 
 DISTNAME=	mu-1.12.7
 PKGREVISION=	3
@@ -31,4 +31,5 @@ BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.16.0
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../mail/gmime3/buildlink3.mk"
 .include "../../textproc/xapian/buildlink3.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
