--- a/devel/objfw/Makefile
+++ b/devel/objfw/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.38 2024/11/14 22:19:33 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2024/12/07 16:44:01 js Exp $
 
-DISTNAME=	objfw-1.2.1
-PKGREVISION=	1
+DISTNAME=	objfw-1.2.2
 CATEGORIES=	devel
 MASTER_SITES=	https://objfw.nil.im/downloads/
 
