--- a/sysutils/R-processx/Makefile
+++ b/sysutils/R-processx/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2024/01/20 02:20:26 mef Exp $
+# $NetBSD: Makefile,v 1.11 2024/12/08 01:54:42 mef Exp $
 
 R_PKGNAME=	processx
-R_PKGVER=	3.8.3
+R_PKGVER=	3.8.4
 CATEGORIES=	sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -21,6 +21,11 @@ TEST_DEPENDS+=	R-rlang-[0-9]*:../../devel/R-rlang
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-webfakes-[0-9]*:../../www/R-webfakes
 TEST_DEPENDS+=	R-withr-[0-9]*:../../devel/R-withr
+
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
