--- a/www/p5-Dancer2/Makefile
+++ b/www/p5-Dancer2/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.71 2024/11/16 12:07:37 wiz Exp $
+# $NetBSD: Makefile,v 1.72 2024/12/08 02:15:50 wen Exp $
 
-DISTNAME=	Dancer2-1.1.1
+DISTNAME=	Dancer2-1.1.2
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/C/CR/CROMEDOME/}
 
