--- a/databases/p5-DBI-Shell/Makefile
+++ b/databases/p5-DBI-Shell/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.32 2024/11/16 12:03:24 wiz Exp $
+# $NetBSD: Makefile,v 1.33 2024/12/08 02:37:23 wen Exp $
 
-DISTNAME=	DBI-Shell-11.97
+DISTNAME=	DBI-Shell-11.98
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	4
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBI/}
 
