--- a/sysutils/R-ps/Makefile
+++ b/sysutils/R-ps/Makefile
@@ -1,18 +1,27 @@
-# $NetBSD: Makefile,v 1.8 2024/09/19 21:39:28 mef Exp $
+# $NetBSD: Makefile,v 1.9 2024/12/08 03:29:31 mef Exp $
 
 R_PKGNAME=	ps
-R_PKGVER=	1.7.7
+R_PKGVER=	1.8.1
 CATEGORIES=	sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	List, query, manipulate system processes
 LICENSE=	modified-bsd
 
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+TEST_DEPENDS+=	R-curl-[0-9]*:../../www/R-curl
 TEST_DEPENDS+=	R-pingr-[0-9]*:../../net/R-pingr
 TEST_DEPENDS+=	R-callr-[0-9]*:../../devel/R-callr
 TEST_DEPENDS+=	R-pillar-[0-9]*:../../misc/R-pillar
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
 TEST_DEPENDS+=	R-webfakes-[0-9]*:../../www/R-webfakes
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
