--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.64 2023/11/02 02:50:44 pho Exp $
+# $NetBSD: Makefile,v 1.65 2024/12/08 14:16:26 taca Exp $
 #
 
 COMMENT=	Benchmarking tools
@@ -53,6 +53,7 @@ SUBDIR+=	postal
 SUBDIR+=	postmark
 SUBDIR+=	ramspeed
 SUBDIR+=	randread
+SUBDIR+=	ruby-benchmark
 SUBDIR+=	skampi
 SUBDIR+=	super_pi
 SUBDIR+=	sysbench
