--- a/databases/ruby-sqlite3/Makefile
+++ b/databases/ruby-sqlite3/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.84 2024/11/14 22:19:13 wiz Exp $
+# $NetBSD: Makefile,v 1.85 2024/12/08 14:24:40 taca Exp $
 
-DISTNAME=	sqlite3-2.2.0
-PKGREVISION=	1
+DISTNAME=	sqlite3-2.4.0
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -15,7 +14,7 @@ USE_GCC_RUNTIME=	yes
 RUBY_EXTCONF_ARGS=	--enable-system-libraries
 OVERRIDE_GEMSPEC+=	:files ${BUNDLED_ARCHIVE}=
 
-BUNDLED_ARCHIVE=	ports/archives/sqlite-autoconf-3470000.tar.gz
+BUNDLED_ARCHIVE=	ports/archives/sqlite-autoconf-3470100.tar.gz
 
 pre-configure:
 	${RM} -f ${WRKSRC}/${BUNDLED_ARCHIVE}
