--- a/wm/emwm-utils/Makefile
+++ b/wm/emwm-utils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2024/12/08 15:09:54 vins Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/08 15:56:21 vins Exp $
 
 DISTNAME=	emwm-utils-src-1.2
 PKGNAME=	${DISTNAME:S,-src,,}
@@ -12,10 +12,13 @@ HOMEPAGE=	https://fastestcode.org/emwm.html
 COMMENT=	Companion utilies for EMWM
 LICENSE=	mit
 
+DEPENDS+=	emwm-[0-9]*:../../wm/emwm
+
 USE_TOOLS+=		sed
 USE_BSD_MAKEFILE=	yes
 
 RCDIR=		${PREFIX}/lib/X11
+DOCDIR=		${PREFIX}/share/doc/emwm/utils
 
 SUBST_CLASSES+=		pkgsrc
 SUBST_STAGE.pkgsrc=	pre-configure
@@ -30,6 +33,12 @@ MAKE_FLAGS+=	LDFLAGS=${LDFLAGS:Q}
 
 SETUID_ROOT_PERMS?=	${REAL_ROOT_USER} ${BINGRP} 4755
 SPECIAL_PERMS+=		bin/xmsm ${SETUID_ROOT_PERMS}
+
+INSTALLATION_DIRS+=	share/doc/emwm/utils
+
+post-install:
+	${INSTALL_DATA} ${FILESDIR}/README.pkgsrc	\
+		${DESTDIR}${DOCDIR}
 
 .include "../../x11/libXScrnSaver/buildlink3.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
