--- a/devel/ruby-activesupport61/Makefile
+++ b/devel/ruby-activesupport61/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.7 2023/03/15 13:31:47 taca Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/08 16:29:25 taca Exp $
 
 DISTNAME=	activesupport-${RAILS_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-activesupport${RUBY_RAILS}-${RAILS_VERSION}
+PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,7 +12,7 @@ LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-i18n>=1.6:../../devel/ruby-i18n
 DEPENDS+=	${RUBY_PKGPREFIX}-tzinfo>=2.0<3:../../time/ruby-tzinfo
-DEPENDS+=	${RUBY_PKGPREFIX}-concurrent-ruby>=1.0<1.2:../../devel/ruby-concurrent-ruby
+DEPENDS+=	${RUBY_PKGPREFIX}-concurrent-ruby11>=1.0<1.2:../../devel/ruby-concurrent-ruby11
 DEPENDS+=	${RUBY_PKGPREFIX}-zeitwerk>=2.3<3:../../devel/ruby-zeitwerk
 # minitest 5.4.3 is bundled with Ruby 2.2 and later.
 #DEPENDS+=	${RUBY_PKGPREFIX}-minitest>=5.1<6:../../devel/ruby-minitest
