--- a/devel/ruby-io-console/Makefile
+++ b/devel/ruby-io-console/Makefile
@@ -1,14 +1,12 @@
-# $NetBSD: Makefile,v 1.11 2024/08/20 02:28:53 wen Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/08 16:40:00 taca Exp $
 
-DISTNAME=	io-console-0.7.2
+DISTNAME=	io-console-0.8.0
 CATEGORIES=	devel
 
 MAINTAINER=	wen@NetBSD.org
 HOMEPAGE=	https://rubygems.org/gems/io-console/
 COMMENT=	Add console capabilities to IO instances
 LICENSE=	2-clause-bsd OR ruby-license
-
-USE_LANGUAGES=	c
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
