--- a/editors/tp-note/Makefile
+++ b/editors/tp-note/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.87 2024/11/17 07:15:50 wiz Exp $
+# $NetBSD: Makefile,v 1.88 2024/12/08 17:24:07 pin Exp $
 
-DISTNAME=	tp-note-1.24.10
-PKGREVISION=	1
+DISTNAME=	tp-note-1.24.11
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_GITLAB:=getreu/}
 GITLAB_RELEASE=	v${PKGVERSION_NOREV}
@@ -15,7 +14,7 @@ LICENSE=	mit OR apache-2.0
 
 RUST_REQ=	1.80.1
 
-WRKSRC=		${WRKDIR}/tp-note-v1.24.10-897d521e148fe3e976a00d1c469ce6271b1266f4
+WRKSRC=		${WRKDIR}/tp-note-v1.24.11-054b006b7570a028bcc9f3868ca59a8128bf1966
 
 USE_TOOLS+=	pkg-config
 
