--- a/mail/qsmtp/Makefile
+++ b/mail/qsmtp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2024/08/25 06:18:58 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2024/12/08 23:08:15 hgutch Exp $
 
 DISTNAME=		Qsmtp-0.39
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		mail
 MASTER_SITES=		${HOMEPAGE}
 EXTRACT_SUFX=		.tar.xz
