--- a/security/gpgme/Makefile
+++ b/security/gpgme/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.120 2024/11/06 22:29:57 wiz Exp $
+# $NetBSD: Makefile,v 1.121 2024/12/09 11:39:38 adam Exp $
 
-DISTNAME=	gpgme-1.24.0
-PKGREVISION=	1
+DISTNAME=	gpgme-1.24.1
 CATEGORIES=	security
 MASTER_SITES=	https://www.gnupg.org/ftp/gcrypt/gpgme/
 EXTRACT_SUFX=	.tar.bz2
