--- a/graphics/blender/Makefile
+++ b/graphics/blender/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.225 2024/11/11 15:47:14 wiz Exp $
+# $NetBSD: Makefile,v 1.226 2024/12/09 14:27:06 ryoon Exp $
 
-DISTNAME=	blender-4.2.1
-PKGREVISION=	2
+DISTNAME=	blender-4.2.4
 CATEGORIES=	graphics
 MASTER_SITES=	https://download.blender.org/source/
 EXTRACT_SUFX=	.tar.xz
